--- a/app.css
+++ b/app.css
@@ -140,11 +140,17 @@ a:hover{
       background-color: rgba(107, 218, 252, 0.2);
       width: 20%;
       text-align: center;
-      
+      transition: transform 0.5s;
   }
   .card img{
       width: 100%;
       height: 150px;
+  }
+
+  /* this makes, that the card grows when hovered over */
+
+  .card:hover {
+    transform: scale(1.1);
   }
 
   .select_container{
