--- a/app.css
+++ b/app.css
@@ -7,7 +7,7 @@
 /* menu list/top navigation bar starts here */
 
 .menu_list{
-    box-shadow: 0px 0px 10px gray;
+    box-shadow: 0px 0px 10px grey;
     background: #EBD8C3;
     padding: 1rem;
     margin: 0;
@@ -17,7 +17,7 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    margin-top: 5px;
+    margin-top: 0.5%;
 }
 
 .menu_list_item a{
@@ -29,7 +29,7 @@
 
 .menu_list li{
     list-style: none;
-    margin: 10px 20px;
+    margin: 2% 4%;
 }
 
 .menu_list_item{
@@ -37,7 +37,7 @@
 }
 
 a:hover{
-    color:blueviolet;
+    color:red;
 }
 
 .menu_list_item span{
@@ -47,7 +47,7 @@ a:hover{
 
 .menu_list :first-child{
     margin-right: auto;
-    margin-left: 20px;
+    margin-left: 1px;
 }
 
 /* menu list/top navigation bar ends here */
@@ -138,13 +138,13 @@ a:hover{
 
   .card{
       background-color: rgba(107, 218, 252, 0.2);
-      width: 20%;
+      width: 30%;
       text-align: center;
       
   }
   .card img{
       width: 100%;
-      height: 150px;
+      height: 50%;
   }
 
   .select_container{
@@ -167,7 +167,7 @@ a:hover{
       align-items: center;
       position: absolute;
       height: 100vh;
-      width: 100vh;
+      width: 100%;
       top: 0;
       bottom: 0;
       right: 0;
@@ -187,7 +187,7 @@ a:hover{
     align-items: center;
     position: absolute;
     height: 100vh;
-    width: 100vh;
+    width: 100%;
     top: 0;
     bottom: 0;
     right: 0;
@@ -207,7 +207,7 @@ a:hover{
     align-items: center;
     position: absolute;
     height: 100vh;
-    width: 100vh;
+    width: 100%;
     top: 0;
     bottom: 0;
     right: 0;
@@ -227,7 +227,7 @@ a:hover{
     align-items: center;
     position: absolute;
     height: 100vh;
-    width: 100vh;
+    width: 100%;
     top: 0;
     bottom: 0;
     right: 0;
